--- a/scripts/add_info.ipynb
+++ b/scripts/add_info.ipynb
@@ -79,17 +79,7 @@
     "\t\terrors.loc[idx] = link, str(soup_object)\n",
     "\t\terrors.to_pickle(\"../data/errors.pkl\")\n",
     "\n",
-    "\treturn link, teilzeit_remote, texts[0], texts[1], texts[2], texts[3], texts[4]\n",
-    "\n",
-    "# jobs = pd.read_pickle(\"jobs.pkl\")\n",
-    "\n",
-    "# jobs1 = jobs[jobs[\"Teilzeit_Remote\"].isna() == True]\n",
-    "# indexes = jobs1.index\n",
-    "# for i in indexes:\n",
-    "# \tjobs.loc[i, [\"Link\", \"Teilzeit_Remote\", \"Introduction\", \"Description\", \"Profile\", \"We_offer\", \"Contact\"]] = add_info(jobs1.loc[i, \"Link\"])\n",
-    "# \tjobs.to_pickle(\"jobs.pkl\")\n",
-    "# driver.quit()\n",
-    "# jobs\n"
+    "\treturn link, teilzeit_remote, texts[0], texts[1], texts[2], texts[3], texts[4]\n"
    ]
   },
   {
