--- a/scripts/add_info.ipynb
+++ b/scripts/add_info.ipynb
@@ -495,7 +495,7 @@
     }
    ],
    "source": [
-    "errors = pd.read_pickle(\"../data/erros.pkl\")\n",
+    "errors = pd.read_pickle(\"../data/errors.pkl\")\n",
     "errors"
    ]
   },
