--- a/scripts/scraping.ipynb
+++ b/scripts/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,10 @@
     "\t\telse:\n",
     "\t\t\tend_reached = True\n",
     "\n",
-    "jobs_df = pd.read_pickle(\"jobs.pkl\")\n",
+    "jobs_df = pd.read_pickle(\"../data/jobs.pkl\")\n",
     "ix_jobs = jobs_df.shape[0]\n",
     "\n",
-    "statistics = pd.read_pickle(\"statistics.pkl\")\n",
+    "statistics = pd.read_pickle(\"../data/statistics.pkl\")\n",
     "ix_stats = statistics.shape[0]\n",
     "\n",
     "# Open Search with keywords\n",
@@ -107,9 +107,16 @@
     "\n",
     "driver.quit()\n",
     "\n",
-    "jobs_df.to_pickle(\"jobs.pkl\")\n",
-    "statistics.to_pickle(\"statistics.pkl\")"
+    "jobs_df.to_pickle(\"../data/jobs.pkl\")\n",
+    "statistics.to_pickle(\"../data/statistics.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
