--- a/scripts/add_info.ipynb
+++ b/scripts/add_info.ipynb
@@ -126,6 +126,322 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>7810</th>\n",
+       "      <td>(Junior) Performance Data Analyst (m/w/d)</td>\n",
+       "      <td>Intrum Deutschland GmbH</td>\n",
+       "      <td>Essen</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>57791394</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7811</th>\n",
+       "      <td>Data Warehouse Developer / Architect*</td>\n",
+       "      <td>Joh. Berenberg, Gossler &amp; Co. KG</td>\n",
+       "      <td>Hamburg</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>57785037</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7812</th>\n",
+       "      <td>Data Architect Data Warehouse / Lakehouse (m/w/d)</td>\n",
+       "      <td>thyssenkrupp Steel Europe AG</td>\n",
+       "      <td>Duisburg</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>57774714</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7813</th>\n",
+       "      <td>Data-Warehouse-Entwickler / ETL – Data Enginee...</td>\n",
+       "      <td>Boerse Stuttgart Group</td>\n",
+       "      <td>Stuttgart</td>\n",
+       "      <td>4355</td>\n",
+       "      <td>5806</td>\n",
+       "      <td>57768373</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7814</th>\n",
+       "      <td>Data Engineer / Analyst (m/f/x)</td>\n",
+       "      <td>ZEISS</td>\n",
+       "      <td>München</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>57782097</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8157</th>\n",
+       "      <td>Application Manager &amp; Business Analyst im Mark...</td>\n",
+       "      <td>Baader Bank AG</td>\n",
+       "      <td>Unterschleißheim bei München</td>\n",
+       "      <td>3790</td>\n",
+       "      <td>5887</td>\n",
+       "      <td>57710455</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8158</th>\n",
+       "      <td>Business Analyst (m/w/d) Prozess- &amp; Systemopti...</td>\n",
+       "      <td>Continentale Lebensversicherung AG</td>\n",
+       "      <td>München</td>\n",
+       "      <td>5645</td>\n",
+       "      <td>6048</td>\n",
+       "      <td>57550334</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8159</th>\n",
+       "      <td>Senior Agile Business Analyst:in / Requirement...</td>\n",
+       "      <td>HDI AG</td>\n",
+       "      <td>Hannover, Köln</td>\n",
+       "      <td>5161</td>\n",
+       "      <td>7419</td>\n",
+       "      <td>57601937</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8160</th>\n",
+       "      <td>Business Analyst (m/w/d) im Squad „Optimierung...</td>\n",
+       "      <td>SIGNAL IDUNA Gruppe</td>\n",
+       "      <td>Dortmund, Hamburg, Koblenz, Leipzig</td>\n",
+       "      <td>3710</td>\n",
+       "      <td>5484</td>\n",
+       "      <td>57530536</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8161</th>\n",
+       "      <td>Senior Security Operations Center Analyst (m/w/d)</td>\n",
+       "      <td>BWI GmbH</td>\n",
+       "      <td>Bonn, Koblenz, Köln</td>\n",
+       "      <td>4677</td>\n",
+       "      <td>6694</td>\n",
+       "      <td>57737013</td>\n",
+       "      <td>https://www.gehalt.de/stellenangebote-jobs/det...</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>352 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Titel  \\\n",
+       "7810          (Junior) Performance Data Analyst (m/w/d)   \n",
+       "7811              Data Warehouse Developer / Architect*   \n",
+       "7812  Data Architect Data Warehouse / Lakehouse (m/w/d)   \n",
+       "7813  Data-Warehouse-Entwickler / ETL – Data Enginee...   \n",
+       "7814                    Data Engineer / Analyst (m/f/x)   \n",
+       "...                                                 ...   \n",
+       "8157  Application Manager & Business Analyst im Mark...   \n",
+       "8158  Business Analyst (m/w/d) Prozess- & Systemopti...   \n",
+       "8159  Senior Agile Business Analyst:in / Requirement...   \n",
+       "8160  Business Analyst (m/w/d) im Squad „Optimierung...   \n",
+       "8161  Senior Security Operations Center Analyst (m/w/d)   \n",
+       "\n",
+       "                             Unternehmen                                  Ort  \\\n",
+       "7810             Intrum Deutschland GmbH                                Essen   \n",
+       "7811    Joh. Berenberg, Gossler & Co. KG                              Hamburg   \n",
+       "7812        thyssenkrupp Steel Europe AG                             Duisburg   \n",
+       "7813              Boerse Stuttgart Group                            Stuttgart   \n",
+       "7814                               ZEISS                              München   \n",
+       "...                                  ...                                  ...   \n",
+       "8157                      Baader Bank AG         Unterschleißheim bei München   \n",
+       "8158  Continentale Lebensversicherung AG                              München   \n",
+       "8159                              HDI AG                       Hannover, Köln   \n",
+       "8160                 SIGNAL IDUNA Gruppe  Dortmund, Hamburg, Koblenz, Leipzig   \n",
+       "8161                            BWI GmbH                  Bonn, Koblenz, Köln   \n",
+       "\n",
+       "     Gehalt_min Gehalt_max     JobID  \\\n",
+       "7810                        57791394   \n",
+       "7811                        57785037   \n",
+       "7812                        57774714   \n",
+       "7813       4355       5806  57768373   \n",
+       "7814                        57782097   \n",
+       "...         ...        ...       ...   \n",
+       "8157       3790       5887  57710455   \n",
+       "8158       5645       6048  57550334   \n",
+       "8159       5161       7419  57601937   \n",
+       "8160       3710       5484  57530536   \n",
+       "8161       4677       6694  57737013   \n",
+       "\n",
+       "                                                   Link      Datum  \\\n",
+       "7810  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "7811  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "7812  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "7813  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "7814  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "...                                                 ...        ...   \n",
+       "8157  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "8158  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "8159  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "8160  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "8161  https://www.gehalt.de/stellenangebote-jobs/det... 2023-09-30   \n",
+       "\n",
+       "     Teilzeit_Remote Introduction Description Profile We_offer Contact  \n",
+       "7810             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "7811             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "7812             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "7813             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "7814             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "...              ...          ...         ...     ...      ...     ...  \n",
+       "8157             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "8158             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "8159             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "8160             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "8161             NaN          NaN         NaN     NaN      NaN     NaN  \n",
+       "\n",
+       "[352 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "jobs = pd.read_pickle(\"../data/jobs.pkl\")\n",
+    "jobs_new = jobs[jobs[\"Teilzeit_Remote\"].isna() == True]\n",
+    "jobs_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Titel</th>\n",
+       "      <th>Unternehmen</th>\n",
+       "      <th>Ort</th>\n",
+       "      <th>Gehalt_min</th>\n",
+       "      <th>Gehalt_max</th>\n",
+       "      <th>JobID</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Teilzeit_Remote</th>\n",
+       "      <th>Introduction</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Profile</th>\n",
+       "      <th>We_offer</th>\n",
+       "      <th>Contact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
        "      <th>7534</th>\n",
        "      <td>Wissenschaftliche*r Mitarbeiter*in – Data Science</td>\n",
        "      <td>Fraunhofer-Einrichtung für Individualisierte u...</td>\n",
