--- a/notebooks/04-Relevant_jobs.ipynb
+++ b/notebooks/04-Relevant_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,6 +251,11 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
+    "from base64 import b64decode\n",
     "\n",
     "script_dir = os.path.abspath(\"\")\n",
     "mymodule_dir = os.path.join(script_dir, \"..\", \"scripts\")\n",
@@ -258,12 +263,12 @@
     "import cleaning\n",
     "\n",
     "jobs = cleaning.prep(pd.read_pickle(\"../data/jobs.pkl\"))\n",
-    "# jobs.head()"
+    "jobs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +277,141 @@
     "    | jobs[\"Profile\"].str.lower().str.contains(\"ethi\"),\n",
     "    :,\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Junior Stellen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "junior_data_science = jobs.loc[(jobs[\"Junior\"]) & (jobs[\"Job Kategorie\"].isin([\"Data Scientist\", \"Data Analyst\"])), [\"JobID\", \"Link\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options = FirefoxOptions()\n",
+    "options.add_argument(\"--headless\")\n",
+    "\n",
+    "with webdriver.Firefox(options=options) as driver:\n",
+    "\twait = WebDriverWait(driver, 20)\n",
+    "\n",
+    "\tfirst = True\n",
+    "\tfor i, row in junior_data_science.iterrows():\n",
+    "\t\tlink = row[\"Link\"]\n",
+    "\t\tJobID = row[\"JobID\"]\n",
+    "\t\tdriver.get(link)\n",
+    "\t\tif first:\n",
+    "\t\t\t# Überprüfen, ob es einen Cookie-Banner gibt\n",
+    "\t\t\twait.until(\n",
+    "\t\t\t\tlambda driver: len(\n",
+    "\t\t\t\t\tdriver.find_elements(\n",
+    "\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
+    "\t\t\t\t\t)\n",
+    "\t\t\t\t)\n",
+    "\t\t\t\t> 0\n",
+    "\t\t\t)\n",
+    "\t\t\t# Klicke ersten Teil des Cookie Banners\n",
+    "\t\t\tdriver.find_element(\n",
+    "\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
+    "\t\t\t).click()\n",
+    "\n",
+    "\t\t\t# Klicke zweiten Teil des Cookie Banners\n",
+    "\t\t\twait.until(\n",
+    "\t\t\t\tlambda driver: len(\n",
+    "\t\t\t\t\tdriver.find_elements(\n",
+    "\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\t\t\".secondary-button.ccmgt_reject_button\",\n",
+    "\t\t\t\t\t)\n",
+    "\t\t\t\t)\n",
+    "\t\t\t\t> 0\n",
+    "\t\t\t)\n",
+    "\t\t\tdriver.find_element(\n",
+    "\t\t\t\tBy.CSS_SELECTOR, \".secondary-button.ccmgt_reject_button\"\n",
+    "\t\t\t).click()\n",
+    "\t\t\tfirst = False\n",
+    "\n",
+    "\t\tif len(driver.find_elements(By.CLASS_NAME, \"js-app-ld-ListingOfflineBlock\")) == 0:\n",
+    "\t\t\tpdf = b64decode(driver.print_page())\n",
+    "\n",
+    "\t\t\twith open(f\"../output/anzeigen/{JobID}.pdf\", 'wb') as f:\n",
+    "\t\t\t\tf.write(pdf)\n",
+    "\t\telse:\n",
+    "\t\t\tjunior_data_science.drop(i)\n",
+    "junior_data_science.to_csv(\"../data/junior_data_science.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Gehalt_min</th>\n",
+       "      <th>Gehalt_max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13296</th>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--juni...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Link  Gehalt_min  \\\n",
+       "13296  https://www.stepstone.de/stellenangebote--juni...        <NA>   \n",
+       "\n",
+       "       Gehalt_max  \n",
+       "13296        <NA>  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look up specific job with id\n",
+    "jobs.loc[jobs[\"JobID\"] == 58185276, [\"Link\", \"Gehalt_min\", \"Gehalt_max\"]]"
    ]
   },
   {
