--- a/notebooks/04-Relevant_jobs.ipynb
+++ b/notebooks/04-Relevant_jobs.ipynb
@@ -288,70 +288,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "junior_data_science = jobs.loc[(jobs[\"Junior\"]) & (jobs[\"Job Kategorie\"].isin([\"Data Scientist\", \"Data Analyst\"])), [\"JobID\", \"Link\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = FirefoxOptions()\n",
-    "options.add_argument(\"--headless\")\n",
+    "junior_data_science_old = pd.read_csv(\"../data/junior_data_science.csv\", index_col=0)\n",
+    "junior_data_science_all = jobs.loc[(jobs[\"Junior\"]) & (jobs[\"Job Kategorie\"].isin([\"Data Scientist\", \"Data Analyst\"])), :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Titel</th>\n",
+       "      <th>Unternehmen</th>\n",
+       "      <th>Ort</th>\n",
+       "      <th>Gehalt_min</th>\n",
+       "      <th>Gehalt_max</th>\n",
+       "      <th>JobID</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Teilzeit_Remote</th>\n",
+       "      <th>Introduction</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Contact</th>\n",
+       "      <th>Vollzeit</th>\n",
+       "      <th>Teilzeit</th>\n",
+       "      <th>Zeit flexibel</th>\n",
+       "      <th>Remote</th>\n",
+       "      <th>Job Kategorie</th>\n",
+       "      <th>Junior</th>\n",
+       "      <th>Gehalt_min_yearly</th>\n",
+       "      <th>Gehalt_max_yearly</th>\n",
+       "      <th>Gehalt_durchschnitt_yearly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Junior Data Scientist (m/w/d) – Risikomodelle</td>\n",
+       "      <td>Sparkassen Rating und Risikosysteme GmbH</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>3710</td>\n",
+       "      <td>5161</td>\n",
+       "      <td>57181289</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--juni...</td>\n",
+       "      <td>2023-09-04</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>Die Sparkassen Rating und Risikosysteme (SR) i...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Herr Emanuel Reitzenstein Tel. +49 30 20672-0 ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>True</td>\n",
+       "      <td>44520</td>\n",
+       "      <td>61932</td>\n",
+       "      <td>53226.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Data/Business Analyst (m/w/d) (Junior)</td>\n",
+       "      <td>Esteve Pharmaceuticals GmbH</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>3548</td>\n",
+       "      <td>5242</td>\n",
+       "      <td>57586900</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--data...</td>\n",
+       "      <td>2023-09-04</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>Esteve ist ein internationales, innovationsget...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Als Teil der ESTEVE-Familie haben Sie die Gele...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>True</td>\n",
+       "      <td>42576</td>\n",
+       "      <td>62904</td>\n",
+       "      <td>52740.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1319</th>\n",
+       "      <td>(Junior) Business Analyst (m/w/d)</td>\n",
+       "      <td>GBI Development GmbH</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>3387</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>57640524</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--juni...</td>\n",
+       "      <td>2023-09-04</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>\\nSMARTments business sind komplett ausgestatt...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dann freuen wir uns auf Deine aussagekräftige ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>True</td>\n",
+       "      <td>40644</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>50322.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6528</th>\n",
+       "      <td>(Junior) Analyst Finanzkriminalität Bank m/w/x</td>\n",
+       "      <td>HR UNIVERSAL GmbH</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>3065</td>\n",
+       "      <td>3871</td>\n",
+       "      <td>57672610</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--juni...</td>\n",
+       "      <td>2023-09-07</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>Wenn Sie sich in dieser anspruchsvollen Aufgab...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>True</td>\n",
+       "      <td>36780</td>\n",
+       "      <td>46452</td>\n",
+       "      <td>41616.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8907</th>\n",
+       "      <td>(Junior) Digital Analyst (m/w/d)</td>\n",
+       "      <td>Cornelsen Verlag GmbH</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>3468</td>\n",
+       "      <td>4839</td>\n",
+       "      <td>57926332</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--juni...</td>\n",
+       "      <td>2023-10-25</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>Die Cornelsen Gruppe mit Hauptsitz in Berlin z...</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>True</td>\n",
+       "      <td>41616</td>\n",
+       "      <td>58068</td>\n",
+       "      <td>49842.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Titel  \\\n",
+       "4      Junior Data Scientist (m/w/d) – Risikomodelle   \n",
+       "96            Data/Business Analyst (m/w/d) (Junior)   \n",
+       "1319               (Junior) Business Analyst (m/w/d)   \n",
+       "6528  (Junior) Analyst Finanzkriminalität Bank m/w/x   \n",
+       "8907                (Junior) Digital Analyst (m/w/d)   \n",
+       "\n",
+       "                                   Unternehmen     Ort  Gehalt_min  \\\n",
+       "4     Sparkassen Rating und Risikosysteme GmbH  Berlin        3710   \n",
+       "96                 Esteve Pharmaceuticals GmbH  Berlin        3548   \n",
+       "1319                      GBI Development GmbH  Berlin        3387   \n",
+       "6528                         HR UNIVERSAL GmbH  Berlin        3065   \n",
+       "8907                     Cornelsen Verlag GmbH  Berlin        3468   \n",
+       "\n",
+       "      Gehalt_max     JobID                                               Link  \\\n",
+       "4           5161  57181289  https://www.stepstone.de/stellenangebote--juni...   \n",
+       "96          5242  57586900  https://www.stepstone.de/stellenangebote--data...   \n",
+       "1319        5000  57640524  https://www.stepstone.de/stellenangebote--juni...   \n",
+       "6528        3871  57672610  https://www.stepstone.de/stellenangebote--juni...   \n",
+       "8907        4839  57926332  https://www.stepstone.de/stellenangebote--juni...   \n",
+       "\n",
+       "          Datum                Teilzeit_Remote  \\\n",
+       "4    2023-09-04  Vollzeit, Home Office möglich   \n",
+       "96   2023-09-04  Vollzeit, Home Office möglich   \n",
+       "1319 2023-09-04  Vollzeit, Home Office möglich   \n",
+       "6528 2023-09-07  Vollzeit, Home Office möglich   \n",
+       "8907 2023-10-25  Vollzeit, Home Office möglich   \n",
+       "\n",
+       "                                           Introduction  ...  \\\n",
+       "4     Die Sparkassen Rating und Risikosysteme (SR) i...  ...   \n",
+       "96    Esteve ist ein internationales, innovationsget...  ...   \n",
+       "1319  \\nSMARTments business sind komplett ausgestatt...  ...   \n",
+       "6528                                                     ...   \n",
+       "8907  Die Cornelsen Gruppe mit Hauptsitz in Berlin z...  ...   \n",
+       "\n",
+       "                                                Contact Vollzeit Teilzeit  \\\n",
+       "4     Herr Emanuel Reitzenstein Tel. +49 30 20672-0 ...     True    False   \n",
+       "96    Als Teil der ESTEVE-Familie haben Sie die Gele...     True    False   \n",
+       "1319  Dann freuen wir uns auf Deine aussagekräftige ...     True    False   \n",
+       "6528  Wenn Sie sich in dieser anspruchsvollen Aufgab...     True    False   \n",
+       "8907                                                        True    False   \n",
+       "\n",
+       "     Zeit flexibel  Remote   Job Kategorie  Junior  Gehalt_min_yearly  \\\n",
+       "4            False    True  Data Scientist    True              44520   \n",
+       "96           False    True    Data Analyst    True              42576   \n",
+       "1319         False    True    Data Analyst    True              40644   \n",
+       "6528         False    True    Data Analyst    True              36780   \n",
+       "8907         False    True    Data Analyst    True              41616   \n",
+       "\n",
+       "     Gehalt_max_yearly  Gehalt_durchschnitt_yearly  \n",
+       "4                61932                     53226.0  \n",
+       "96               62904                     52740.0  \n",
+       "1319             60000                     50322.0  \n",
+       "6528             46452                     41616.0  \n",
+       "8907             58068                     49842.0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "junior_data_science_berlin = junior_data_science_all.loc[junior_data_science_all[\"Ort\"] == \"Berlin\", :]\n",
+    "junior_data_science_berlin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_as_pdf(df_, suffix):\n",
+    "\toptions = FirefoxOptions()\n",
+    "\toptions.add_argument(\"--headless\")\n",
     "\n",
-    "with webdriver.Firefox(options=options) as driver:\n",
-    "\twait = WebDriverWait(driver, 20)\n",
+    "\twith webdriver.Firefox(options=options) as driver:\n",
+    "\t\twait = WebDriverWait(driver, 20)\n",
     "\n",
-    "\tfirst = True\n",
-    "\tfor i, row in junior_data_science.iterrows():\n",
-    "\t\tlink = row[\"Link\"]\n",
-    "\t\tJobID = row[\"JobID\"]\n",
-    "\t\tdriver.get(link)\n",
-    "\t\tif first:\n",
-    "\t\t\t# Überprüfen, ob es einen Cookie-Banner gibt\n",
-    "\t\t\twait.until(\n",
-    "\t\t\t\tlambda driver: len(\n",
-    "\t\t\t\t\tdriver.find_elements(\n",
-    "\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
-    "\t\t\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
+    "\t\tfirst = True\n",
+    "\t\tfor i, row in df_.iterrows():\n",
+    "\t\t\tlink = row[\"Link\"]\n",
+    "\t\t\tJobID = row[\"JobID\"]\n",
+    "\t\t\tdriver.get(link)\n",
+    "\t\t\tif first:\n",
+    "\t\t\t\t# Überprüfen, ob es einen Cookie-Banner gibt\n",
+    "\t\t\t\twait.until(\n",
+    "\t\t\t\t\tlambda driver: len(\n",
+    "\t\t\t\t\t\tdriver.find_elements(\n",
+    "\t\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
+    "\t\t\t\t\t\t)\n",
     "\t\t\t\t\t)\n",
+    "\t\t\t\t\t> 0\n",
     "\t\t\t\t)\n",
-    "\t\t\t\t> 0\n",
-    "\t\t\t)\n",
-    "\t\t\t# Klicke ersten Teil des Cookie Banners\n",
-    "\t\t\tdriver.find_element(\n",
-    "\t\t\t\tBy.CSS_SELECTOR,\n",
-    "\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
-    "\t\t\t).click()\n",
+    "\t\t\t\t# Klicke ersten Teil des Cookie Banners\n",
+    "\t\t\t\tdriver.find_element(\n",
+    "\t\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\t\"#ccmgt_explicit_preferences.privacy-prompt-button.secondary-button.options-button\",\n",
+    "\t\t\t\t).click()\n",
     "\n",
-    "\t\t\t# Klicke zweiten Teil des Cookie Banners\n",
-    "\t\t\twait.until(\n",
-    "\t\t\t\tlambda driver: len(\n",
-    "\t\t\t\t\tdriver.find_elements(\n",
-    "\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
-    "\t\t\t\t\t\t\".secondary-button.ccmgt_reject_button\",\n",
+    "\t\t\t\t# Klicke zweiten Teil des Cookie Banners\n",
+    "\t\t\t\twait.until(\n",
+    "\t\t\t\t\tlambda driver: len(\n",
+    "\t\t\t\t\t\tdriver.find_elements(\n",
+    "\t\t\t\t\t\t\tBy.CSS_SELECTOR,\n",
+    "\t\t\t\t\t\t\t\".secondary-button.ccmgt_reject_button\",\n",
+    "\t\t\t\t\t\t)\n",
     "\t\t\t\t\t)\n",
+    "\t\t\t\t\t> 0\n",
     "\t\t\t\t)\n",
-    "\t\t\t\t> 0\n",
-    "\t\t\t)\n",
-    "\t\t\tdriver.find_element(\n",
-    "\t\t\t\tBy.CSS_SELECTOR, \".secondary-button.ccmgt_reject_button\"\n",
-    "\t\t\t).click()\n",
-    "\t\t\tfirst = False\n",
+    "\t\t\t\tdriver.find_element(\n",
+    "\t\t\t\t\tBy.CSS_SELECTOR, \".secondary-button.ccmgt_reject_button\"\n",
+    "\t\t\t\t).click()\n",
+    "\t\t\t\tfirst = False\n",
     "\n",
-    "\t\tif len(driver.find_elements(By.CLASS_NAME, \"js-app-ld-ListingOfflineBlock\")) == 0:\n",
-    "\t\t\tpdf = b64decode(driver.print_page())\n",
+    "\t\t\tif len(driver.find_elements(By.CLASS_NAME, \"js-app-ld-ListingOfflineBlock\")) == 0:\n",
+    "\t\t\t\tpdf = b64decode(driver.print_page())\n",
     "\n",
-    "\t\t\twith open(f\"../output/anzeigen/{JobID}.pdf\", 'wb') as f:\n",
-    "\t\t\t\tf.write(pdf)\n",
-    "\t\telse:\n",
-    "\t\t\tjunior_data_science.drop(i)\n",
-    "junior_data_science.to_csv(\"../data/junior_data_science.csv\")"
+    "\t\t\t\twith open(f\"../output/anzeigen/{JobID}_{suffix}.pdf\", 'wb') as f:\n",
+    "\t\t\t\t\tf.write(pdf)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tdf_.drop(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The geckodriver version (0.33.0) detected in PATH at /usr/local/bin/geckodriver might not be compatible with the detected firefox version (121.0); currently, geckodriver 0.34.0 is recommended for firefox 121.*, so it is advised to delete the driver in PATH and retry\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_as_pdf(junior_data_science_berlin, \"berlin\")"
    ]
   },
   {
